--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- https://boxicons.com/ -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <!-- https://remixicon.com/ -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet" />
 
